Fixed welcome screen content overflow on mobile devices.

--- a/static/koboldai.css
+++ b/static/koboldai.css
@@ -1658,7 +1658,7 @@ body {
 
 .themerow {
 	grid-area: theme;
-	width: 500px;
+	/* width: 500px; */
 	margin-left: 10px;
 }
 
